# sparse_merkle_tree

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/sparse_merkle_tree/: sparse_merkle_tree.hpp
source/: sparse_merkle_tree.cpp
test/: CMakeLists.txt
test/source/: sparse_merkle_tree_test.cpp
