cmake_minimum_required(VERSION 3.14)

include(cmake/prelude.cmake)

project(
    sparse_merkle_tree
    VERSION 0.1.0
    DESCRIPTION "Sparse Merkle Tree library implementation"
    HOMEPAGE_URL "https://github.com/bnonni/sparse_merkle_tree"
    LANGUAGES CXX
)

include(cmake/project-is-top-level.cmake)
include(cmake/variables.cmake)

# ---- Declare library ----

add_library(
    sparse_merkle_tree_sparse_merkle_tree
    source/sparse_merkle_tree.cpp
)
add_library(sparse_merkle_tree::sparse_merkle_tree ALIAS sparse_merkle_tree_sparse_merkle_tree)

include(GenerateExportHeader)
generate_export_header(
    sparse_merkle_tree_sparse_merkle_tree
    BASE_NAME sparse_merkle_tree
    EXPORT_FILE_NAME export/sparse_merkle_tree/sparse_merkle_tree_export.hpp
    CUSTOM_CONTENT_FROM_VARIABLE pragma_suppress_c4251
)

if(NOT BUILD_SHARED_LIBS)
  target_compile_definitions(sparse_merkle_tree_sparse_merkle_tree PUBLIC SPARSE_MERKLE_TREE_STATIC_DEFINE)
endif()

set_target_properties(
    sparse_merkle_tree_sparse_merkle_tree PROPERTIES
    CXX_VISIBILITY_PRESET hidden
    VISIBILITY_INLINES_HIDDEN YES
    VERSION "${PROJECT_VERSION}"
    SOVERSION "${PROJECT_VERSION_MAJOR}"
    EXPORT_NAME sparse_merkle_tree
    OUTPUT_NAME sparse_merkle_tree
)

target_include_directories(
    sparse_merkle_tree_sparse_merkle_tree ${warning_guard}
    PUBLIC
    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
)

target_include_directories(
    sparse_merkle_tree_sparse_merkle_tree SYSTEM
    PUBLIC
    "\$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/export>"
)

target_compile_features(sparse_merkle_tree_sparse_merkle_tree PUBLIC cxx_std_20)

find_package(fmt REQUIRED)
target_link_libraries(sparse_merkle_tree_sparse_merkle_tree PRIVATE fmt::fmt)

# ---- Install rules ----

if(NOT CMAKE_SKIP_INSTALL_RULES)
  include(cmake/install-rules.cmake)
endif()

# ---- Examples ----

if(PROJECT_IS_TOP_LEVEL)
  option(BUILD_EXAMPLES "Build examples tree." "${sparse_merkle_tree_DEVELOPER_MODE}")
  if(BUILD_EXAMPLES)
    add_subdirectory(example)
  endif()
endif()

# ---- Developer mode ----

if(NOT sparse_merkle_tree_DEVELOPER_MODE)
  return()
elseif(NOT PROJECT_IS_TOP_LEVEL)
  message(
      AUTHOR_WARNING
      "Developer mode is intended for developers of sparse_merkle_tree"
  )
endif()

include(cmake/dev-mode.cmake)
